--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Fast php script to parse user agents",
     "keywords": ["user agent", "ua-parser"],
     "license": "MIT",
-    "bin": ["extra/update.php"],
+    "bin": ["extra/uaparser-update"],
     "authors": [
         {
             "name": "Joe Green",
