--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,14 @@
             "email": "joe.green0991@gmail.com"
         }
     ],
+    "scripts": {
+        "post-install-cmd": [
+                "php ./vendor/bin/uaparser-update"
+        ],
+        "post-update-cmd": [
+                "php ./vendor/bin/uaparser-update"
+        ]
+    },
     "autoload": {
         "psr-0": {
             "UAParser": "lib"
