better test facility

--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "description": "Fast php script to parse user agents",
     "keywords": ["user agent", "ua-parser"],
     "license": "MIT",
-    "bin": ["extra/uaparser-update","extra/uaparser-test"],
+    "bin": ["bin/uaparser-update","bin/uaparser-test"],
     "scripts": {
 		"post-install-cmd": [
-			"extra/uaparser-update -y"
+			"bin/uaparser-update -y"
 		],
 		"post-update-cmd": [
-			"extra/uaparser-update -y"
+			"bin/uaparser-update -y"
 		]
 	},
     "authors": [
