--- a/tests/test_ua.yml
+++ b/tests/test_ua.yml
@@ -1,5 +1,11 @@
 test_cases:
 
+  - user_agent_string: 'Mozilla/5.0 (PlayStation 4 1.52) AppleWebKit/536.26 (KHTML, like Gecko)'
+    family: 'PlayStation 4 Browser'
+    major:
+    minor:
+    patch:
+        
   - user_agent_string: 'Mozilla/5.0 (Windows; U; en-US) AppleWebKit/531.9 (KHTML, like Gecko) AdobeAIR/2.5.1'
     family: 'AdobeAIR'
     major: '2'
